--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -1,5 +1,9 @@
+/* blue: #1e4488; */
+/* orange: #f5831f; */
+
+
 .navbar {
-    background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
+    background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgb(215, 215, 215) 100%);
     height: 80px;
     display: flex;
     justify-content: center;
@@ -8,6 +12,7 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    box-shadow: 0 0 8px rgba(155, 155, 155, 0.5);
   }
   
   .navbar-container {
@@ -29,6 +34,10 @@
     align-items: center;
   }
   
+.alter-logo {
+  height: 100px;
+}
+
   .capital {
     font-size: 2.2rem;
     vertical-align: baseline;
@@ -41,7 +50,7 @@
   
   .nav-menu {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: repeat(5, auto);
     grid-gap: 10px;
     list-style: none;
     text-align: center;
@@ -55,16 +64,18 @@
   }
   
   .nav-links {
-    color: #fff;
+    color: #5a5a5a;
     display: flex;
     align-items: center;
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    /* padding: 0.5rem 1rem; */
+    padding-inline: 1rem;
     height: 100%;
   }
   
   .nav-links:hover {
-    border-bottom: 4px solid #fff;
+    color: #f5831f;
+    border-bottom: 4px solid #f5831f;
     transition: all 0.2s ease-out;
   }
   
